k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-app
  labels:
    project: tinyuka-2025-capstone
    managed-by: kubectl
